--- a/Cafe_DeTerunjing/Pages/Shared/_Layout.cshtml
+++ b/Cafe_DeTerunjing/Pages/Shared/_Layout.cshtml
@@ -40,6 +40,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Account/Login">Login</a>
                         </li>
+                        <li>
+                            <form asp-page="/Account/Logout" method="post">
+                                <button type="submit">Logout</button>
+                            </form>
+                        </li>
                     </ul>
                 </div>
             </div>
