--- a/Cafe_DeTerunjing/Pages/MenuModel/Index.cshtml
+++ b/Cafe_DeTerunjing/Pages/MenuModel/Index.cshtml
@@ -47,6 +47,7 @@
                 <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-page="/UploadImage" asp-route-id="@item.Id">Upload Image</a>
             </td>
         </tr>
 }
