fixing the login problem

--- a/Cafe_DeTerunjing/Pages/Menu.cshtml
+++ b/Cafe_DeTerunjing/Pages/Menu.cshtml
@@ -38,7 +38,7 @@
                     @Html.DisplayFor(modelItem => item.Price)
                 </td>
                 @{
-                    var imagePath = @"images\" + item.ID + ".jpg";
+                    var imagePath = @"images\" + item.Id + ".jpg";
 
                 }
                 <td>
