already fix the text hiding under the navbar

--- a/Cafe_DeTerunjing/Pages/Shared/_Layout.cshtml
+++ b/Cafe_DeTerunjing/Pages/Shared/_Layout.cshtml
@@ -51,6 +51,11 @@
         </nav>
     </header>
 
+    <div id="grid">
+        <div></div>
+        <div></div>
+    </div>
+
 
         <div class="container">
             <main role="main" class="pb-3">
